Mon Jun  7 19:27:07 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* pa.md (fmpyfadd, fmpynfadd, fnegabs): New patterns.

Sun Jun  6 11:58:34 1999  Jakub Jelinek  <jj@ultra.linux.cz>

	* sparc.md (abstf2): This should be an expand.
	(split after abstf2_notv9): Fix mode.
	(abstf2_hq_v9): New pattern.
	(abstf2_v9): Only use when no hard quad.
	(absdf2_v9): Fix if target is not the same as source.
	(ashrsi3_extend, ashrsi3_extend2, lshrsi3_extend, lshrsi3_extend2):
	Add correct output constraints.

Sat Jun  5 17:04:16 1999  Craig Burley  <craig@jcb-sc.com>

	From Dave Love to egcs-patches on 20 May 1999 17:38:38 +0100:
	* invoke.texi: Clarify text vis-a-vis Intel CPUs.

Fri Jun  4 13:30:27 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* alpha/osf.h (CPP_SUBTARGET_SPEC): Handle -threads.
	(LIB_SPEC): Likewise.
	Link with -lprof1_r for -g/-pg.

1999-06-04  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* loop.c (check_dbra_loop): Fix change of Jan 19.

Fri Jun  4 00:12:40 1999  Marc Espie <espie@cvs.openbsd.org>

	* freebsd-elf.h (SWITCH_TAKES_ARG):  Redefine, not define.
	(STARTFILE_SPEC):  Define, override the svr4.h version.
	(ENDFILE_SPEC):  Likewise.

Thu Jun  3 23:58:55 1999  Jeffrey A Law  (law@cygnus.com)

	* fixinc/inclhack.def (limits_ifndefs): Also apply to sys/limits.h
	* fixinc/fixincl.x: Regenerated.
	* fixinc/inclhack.sh: Regenerated.

Thu Jun 3 07:48 1999  Bruce Korb <ddsinc09@ix.netcom.com>

	* fixinc/inclhack.def(Io_Def_Quotes): corrected sed expression
	* fixinc/fixincl.x: regenerate
	* fixinc/inclhack.sh: regenerate

Thu Jun  3 22:27:50 1999  Robert Lipe  <robertlipe@usa.net>

	* i386/udk.h (LINK_SPEC): Correct linker search path for
	system libraries.

Thu Jun  3 02:15:07 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* dwarf2out.c (add_incomplete_type): New fn.
	(gen_struct_or_union_type_die): Call it.
	(retry_incomplete_types): New fn.
	(dwarf2out_finish): Call it.

Thu Jun  3 01:19:03 1999  Jeffrey A Law  (law@cygnus.com)
